# Agentic-Invoice-Generator

./: .env  pyproject.toml
backend/: main.py
frontend/: userInterface.py
n8n-workflow/: README.md  invoice_workflow.json
